--- a/webfscholar/templates/montserrat-badges.html
+++ b/webfscholar/templates/montserrat-badges.html
@@ -197,6 +197,7 @@ h2 span.small {
 
 .papers {
   margin-top:5em;
+  margin-bottom:5em;
 }
 </style>
   </head>
@@ -205,8 +206,8 @@ h2 span.small {
       <div class="wrap">
         <form>
           <div class="search">
-            <input id="search-bar" type="text" placeholder="Search for papers by title and tag">
-            <input class="fa" type="submit" value="&#xf002;">
+            <input id="search-bar" name="s" type="text" placeholder="Search for papers by title and tag">
+            <input class="fa" type="submit" value="&rarr;">
           </div>
         </form>
         {% for pub in publications %}
@@ -215,7 +216,10 @@ h2 span.small {
             <h2>{{ pub['title'] }}</h2>
             <p class="byline"><span>{{ pub['author'] }}</span></p>
           </a>
-          <p><span class="button tight">{{ pub['journal'] }} {{ pub['year'] }}</span><a href="{{ pub['url'] }}" class="button tight">Paper</a><span class="tags"><a href="?s=xai#papers">#xai</a> <a href="?s=nbdt#papers">#nbdt</a></span></p>
+          <p><span class="button tight {% if 'arxiv' not in pub['journal'].lower() %}colored{% endif %}">{{ pub['journal'] }} {{ pub['year'] }}</span>
+            <a href="{{ pub['url'] }}" class="button tight">Paper</a>
+            {% if pub['code'] %}<a href="{{ pub['code'] }}" class="button tight">Code</a>{% endif %}
+            <!--<span class="tags"><a href="?s=xai#papers">#xai</a> <a href="?s=nbdt#papers">#nbdt</a></span>--></p>
         </article>
         {% endfor %}
       </div>
@@ -224,6 +228,44 @@ h2 span.small {
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
-    <script src="static/search.js"></script>
+    <script>
+$('document').ready(function() {
+  $('#search-bar').on('input', function(e) {
+    var term = $(this).val();
+    $('article').show();
+    if (term.length > 0) {
+      for (var id in id_to_keywords) {
+        value = id_to_keywords[id];
+        if (!value.toUpperCase().includes(term.toUpperCase())) {
+          $('#' + id).hide();
+        }
+      }
+    }
+  });
+
+  function createSearchIndex() {
+    var id_to_keywords = {};
+    $('article').each((i, el) => {
+      var id = 'article' + i;
+      el = $(el);
+      el.attr('id', id);
+      keywords = el.find('h2').html() + el.find('.tags a').html();
+      id_to_keywords[id] = keywords
+    });
+
+    console.log('Populated search index: ');
+    console.log(id_to_keywords);
+    return id_to_keywords;
+  }
+
+  var id_to_keywords = createSearchIndex();
+
+  var urlParams = new URLSearchParams(window.location.search);
+  if (urlParams.has('s')) {
+    $('#search-bar').val(urlParams.get('s'));
+    $('#search-bar').trigger('input');
+  }
+});
+    </script>
   </body>
 </html>
